// React;
import React from 'react';
// Files;
import App from './../src/App.jsx';
import Flache from '../flache';
// Testing
import ReactShallowRenderer from 'react-test-renderer/shallow';
import { configure } from 'enzyme';
import Adapter from 'enzyme-adapter-react-16';
import renderer from 'react-test-renderer';
import { shallow, mount, render } from 'enzyme';
import { spy } from 'sinon';

configure({ adapter: new Adapter() });


/**
 * research waht reactShallowrendered,l adapter and renderer do here...
 */

/**
 * Snapshot testing of initial render
 */
test('should render App component correctly', () => {
  const renderer = new ReactShallowRenderer();
  renderer.render(<App />);
  expect(renderer.getRenderOutput()).toMatchSnapshot();
});

it('input form taking in search terms, language, #, and stars renders correctly', () => {
  const tree = renderer
    .create(<div id="form-wrapper">
      <h2>Find Github Repositories</h2>
      <div className="searchBoxes">
        <label>Search: <input id="searchText" type="text" className="text"/></label>
      </div>
      <div className="searchBoxes">
        <label>Language: <input id="searchLang" type="text" className="text"/></label>
      </div>
      <div className="searchBoxes">
        <label># of ☆: <input id="searchStars" type="text" className="text"/></label>
      </div>
      <div className="searchBoxes">
        <label># to fetch: <input id="searchNum" type="text" className="text"/></label>
      </div>
      <input type="button" value="Search" onClick={() => this.handleSubmit([''])} />
      <input type="button" value="Search w/createdAt" onClick={() => this.handleSubmit(['createdAt'])} />
      <input type="button" value="Search w/createdAt and databaseId" onClick={() => this.handleSubmit(['createdAt', 'databaseId'])} />
      <input type="button" value="Search w/databaseId" onClick={() => this.handleSubmit(['databaseId'])} />
      <input type="button" value="Show query cache" onClick={() => console.log(this.cache.comparisonCache, this.cache.cache)} />
    </div>)
    .toJSON();
  expect(tree).toMatchSnapshot();
});

/**
 * Testing initial component statefulness
 */
it('Git box is instantiated as empty array upon load', () => {
  const wrapper = shallow(<App/>);
  expect(wrapper.instance().state.gitBoxes).toEqual([])
});

it('Cache is instantiated as Flache Cache', () => {
  const wrapper = shallow(<App/>);
  //console.log('wrapper', wrapper.find('.main-container'));
  expect(wrapper.instance().cache).toEqual(new Flache());
});

/**
 * Testing fake ajax calls and functionality of component with Sinon and Sinon Spies
 * looks like you have to use sinon to create stub of data, whats suppossed to be returned from
 * ajax call and then use a spy to make sure that clicking the button works- testing the functionality and the promise aspect of it
 */
it('Clicking search button with valid values makes AJAX call to the Github API', () => {
  //have to mount all the stuff with values!!!!!!
  const wrapper = mount(<App/>);
  wrapper.find('.search-no-params').simulate('click');
  //wrapper.findWhere(node => node.innerText === 'Search w/createdAt').simulate('click');
  expect(wrapper.state('gitBoxes')).to.equal([]);
});