// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input form taking in search terms, language, #, and stars renders correctly 1`] = `
<div
  id="form-wrapper"
>
  <h2>
    Find Github Repositories
  </h2>
  <div
    className="searchBoxes"
  >
    <label>
      Search: 
      <input
        className="text"
        id="searchText"
        type="text"
      />
    </label>
  </div>
  <div
    className="searchBoxes"
  >
    <label>
      Language: 
      <input
        className="text"
        id="searchLang"
        type="text"
      />
    </label>
  </div>
  <div
    className="searchBoxes"
  >
    <label>
      # of ☆: 
      <input
        className="text"
        id="searchStars"
        type="text"
      />
    </label>
  </div>
  <div
    className="searchBoxes"
  >
    <label>
      # to fetch: 
      <input
        className="text"
        id="searchNum"
        type="text"
      />
    </label>
  </div>
  <input
    onClick={[Function]}
    type="button"
    value="Search"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Search w/createdAt"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Search w/createdAt and databaseId"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Search w/databaseId"
  />
  <input
    onClick={[Function]}
    type="button"
    value="Show query cache"
  />
</div>
`;

exports[`should render App component correctly 1`] = `
<div
  className="main-container"
>
  <div
    id="top-wrapper"
  >
    <div
      id="form-wrapper"
    >
      <h2>
        Find Github Repositories
      </h2>
      <div
        className="searchBoxes"
      >
        <label>
          Search: 
          <input
            className="text"
            id="searchText"
            type="text"
          />
        </label>
      </div>
      <div
        className="searchBoxes"
      >
        <label>
          Language: 
          <input
            className="text"
            id="searchLang"
            type="text"
          />
        </label>
      </div>
      <div
        className="searchBoxes"
      >
        <label>
          # of ☆: 
          <input
            className="text"
            id="searchStars"
            type="text"
          />
        </label>
      </div>
      <div
        className="searchBoxes"
      >
        <label>
          # to fetch: 
          <input
            className="text"
            id="searchNum"
            type="text"
          />
        </label>
      </div>
      <input
        className="search-no-params"
        onClick={[Function]}
        type="button"
        value="Search"
      />
      <input
        onClick={[Function]}
        type="button"
        value="Search w/createdAt"
      />
      <input
        onClick={[Function]}
        type="button"
        value="Search w/createdAt and databaseId"
      />
      <input
        onClick={[Function]}
        type="button"
        value="Search w/databaseId"
      />
      <input
        onClick={[Function]}
        type="button"
        value="Show query cache"
      />
    </div>
    <div
      id="timer-wrapper"
    >
      <QueryTimer
        class="timerF"
        lastQueryTime="Please wait..."
        timerText="Last query fetched 0 results in"
        title="FlacheQL"
      />
      <QueryTimer
        class="timerF"
        lastQueryTime="Please submit query..."
        timerText="Last query fetched 0 results in"
        title="Apollo"
      />
    </div>
    <CacheNotifier
      showCacheHit={true}
    />
  </div>
  <div
    className="result-list"
  />
</div>
`;
